# bc-auction-explorer

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  TODO.md  alembic.ini  compose.production.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260715_01_initial_persistence.py  20260716_02_enforce_scrape_run_lifecycle.py  20260716_03_preserve_current_observation_state.py  20260716_04_deduplicate_observation_history.py  20260717_05_add_scrape_run_metrics.py  20260718_06_add_inventory_freshness.py
docker/: Dockerfile  entrypoint.sh
docker/initdb/: 01-create-test-database.sql
docker/production/: postgres-entrypoint.sh  postgres.Dockerfile
docker/proxy/: Caddyfile  Dockerfile
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: listings.spec.ts
frontend/scripts/: generate-api-types.mjs
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  (+3 more)
scripts/: backup-db.sh  restore-db.sh
src/bc_auction/: __init__.py  __main__.py  api.py  api_models.py  client.py  database.py  encoding.py  errors.py  healthcheck.py  live_smoke.py  locations.py  models.py  openapi.py  operations.py  persistence.py  read_repository.py  runtime.py  urls.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_detail_parser.py  test_encoding.py  test_fixture_integrity.py  test_live_smoke.py  test_locations.py  test_models.py  test_openapi.py  test_operations.py  test_persistence.py  test_persistence_integration.py  test_results_parser.py  test_runtime.py  test_scrape_end_to_end.py  test_search_parser.py  test_urls.py
tests/fixtures/: item-detail-closed.html  item-detail-frame.html  item-detail-no-bid.html  item-detail-unavailable.html  item-detail-withdrawn.html  item-detail-working.html  item-detail.html  manifest.json  results-closed.html  results-empty.html  results-open-highest-price.html  results-open-page-1.html  results-open-page-2.html  search-entry.html  welcome-content.html  welcome.html
(+22 files in other folders)
