[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bc-auction-explorer"
version = "0.1.0"
description = "Read-only index of public BC Auction listings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "beautifulsoup4>=4.12,<5",
    "charset-normalizer>=3.4,<4",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "lxml>=5.3,<7",
    "pydantic>=2.10,<3",
    "psycopg[binary]>=3.2,<4",
    "SQLAlchemy>=2.0,<3",
    "starlette>=0.46,<1",
    "tqdm>=4.67,<5",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<8",
    "ruff>=0.9,<1",
    "types-tqdm>=4.67,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: requires a PostgreSQL database configured by BC_AUCTION_TEST_DATABASE_URL",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["bc_auction"]
